2025-05-26T01:24:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15244162992 # 655
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 1000 1480 / 1011 1491
* notice: next accum: outdated-unq outdated-all / unq all: 1000 1480 / 1012 1492
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-25]

2025-05-25T01:36:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15232927036 # 654
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-25
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 999 1479 / 1011 1491
* notice: next accum: outdated-unq outdated-all / unq all: 1000 1480 / 1011 1491
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-11] / []

2025-05-24T01:19:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15221938673 # 653
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-24
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 998 1478 / 1009 1489
* notice: next accum: outdated-unq outdated-all / unq all: 999 1479 / 1011 1491
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-10] / [2025-05-23 2025-05-24]

2025-05-23T01:22:19Z: