@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-26T01:24:16Z",
-  "count_outdated" : 1480,
-  "uniques_outdated" : 1000,
+  "timestamp" : "2025-05-27T01:21:21Z",
+  "count_outdated" : 1481,
+  "uniques_outdated" : 1001,
   "count" : 1492,
   "uniques" : 1012,
   "clones" : [
-    {
-      "timestamp": "2025-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-14T00:00:00Z",
       "count": 2,
