@@ -1,3 +1,12 @@
+2025-05-27T01:21:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15264598391 # 656
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-27
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 1000 1480 / 1012 1492
+* notice: next accum: outdated-unq outdated-all / unq all: 1001 1481 / 1012 1492
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-13] / []
+
 2025-05-26T01:24:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15244162992 # 655
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
